# GlowieOS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake-config.cmake  cmake-toolchain.cmake  common.mk  install.sh
cross/: .gitignore
cross/scripts/: aux.sh  build.sh
kernel/: CMakeLists.txt  Makefile  limine.conf  linker-x86_64-elf.ld  linker-x86_64-linux-gnu.ld
kernel/include/arch/: arch.hpp  io.hpp  other.hpp  pci.hpp  syscall.hpp  xconcat.hpp
kernel/include/arch/ppc64/: io.hpp  syscall.hpp
kernel/include/arch/x86_64/: io.hpp
kernel/include/kernel/: init.hpp  log.hpp
kernel/src/: entry.cpp  kmain.cpp  log.cpp  serial.cpp
kernel/src/arch/ppc64/: io.cpp
kernel/src/arch/x86_64/: io.cpp
lib/libc/: Makefile  build.sh
lib/libc/include/: stdio.h  string.h
lib/libc/src/stdio/: fclose.c  fopen.c
lib/libc/src/string/: memcpy.c
makefiles/: env.mk  flags_compile_default.mk  flags_link_default.mk  link_rules.mk  sources_recursive.mk
patch/: mpfr-4.1.0.patch
patches/: gmp-6.2.1.patch  mpc-1.2.1.patch  mpfr-4.1.0.patch
script/: aux.sh  build.sh  clean.sh  dist_extract.sh  dist_fetch.sh  dist_symlink.sh  env.sh  run_autotools.sh  sysroot.sh
scripts/: aux-gcc.sh  aux.sh  build.sh  clean.sh  dist_extract.sh  dist_fetch.sh  dist_symlink.sh  env.sh  fetch.sh  get_archives.sh  get_deps.sh  package_build.sh  package_get.sh  patch_apply.sh  patch_create.sh  release.sh  run.sh  unpack.sh
sources/: checksum.sha256  manifest.txt
